2020-05-12  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added 'last commit badge'

2020-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* NAMESPACE: Removed as not needed without R code

2020-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Standardize header and badges

2020-03-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Relase 1.12.2-1

	* inst/include/asio*: Upgraded to Asio 1.12.2

	* README.md: Updated URLs to think-async.com/Asio/
	* man/AsioHeaders-package.Rd: Ditto

2018-09-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 1.12.1-1

2018-09-04  Joe Cheng  <joe@rstudio.com>

	* inst/include/asio*: Upgraded to Asio 1.12.1

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Very minor update

2017-04-23  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to run.sh from maintained for R and Travis

2016-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 1.11.0-1

	* inst/include/asio*: Once again included

	* DESCRIPTION: Add Copyright: reference to inst/COPYRIGHTS, overall
	Copyright: back to BSL-1.0

	* inst/COPYRIGHTS: Detailing Asio copyrights

	* .Rbuildignore: Ignore unused/
	* configure: Moved to unused/
	* configure.win: Ditto

2016-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* .Rbuildignore: No longer install inst/include/asio*

	* configure: New File, installing asioHeaders.tar.gz as needed
	* configure.win: Ditto

	* DESCRIPTION: Copyright: GPL (>= 2) for the R package
	* README.md: Ditto

2015-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Expanded, and explicitly mention Chris Kohlhoff

	* .gitignore: Small but important correction to not exclude local/

	* tests/simpleTests.R: Minimal test added

	* inst/NEWS.Rd: Added

2015-12-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/: Initial version based on asio-1.11.0