@@ -2,12 +2,17 @@
 
 language: c
 sudo: required
-dist: trusty
+dist: bionic
+
+jobs:
+  include:
+    #- name: r-3.5
+    #  env: R_VERSION="3.5"
+    - name: r-4.0
+      env: R_VERSION="4.0"
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  # optionally add our launchpad repo, but not needed here
-  # - sudo add-apt-repository -y ppa:edd/r-3.5
   - ./run.sh bootstrap
 
 #install:
