@@ -1,3 +1,9 @@
+2020-06-28  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/asio*: Upgraded to Asio 1.16.1
+
+	* .travis.yml: Updated to 'bionic' and R 4.0.*
+
 2020-05-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Added 'last commit badge'
